[package]
authors = ["Alison Oliveira <arobsn@proton.me>"]
edition = "2024"
name = "hergmes"
version = "0.1.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "hergmes"
path = "src/main.rs"

[dependencies]
arc-swap = "1.8.2"
dotenvy = "0.15.7"
hex = "0.4.3"
reqwest = { version = "0.13.2", features = ["json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
